--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 	<head>
 		<script src="myscript.js"></script>
 		<link rel="stylesheet" href="styles.css">
+		<link href="https://fonts.cdnfonts.com/css/coffee-shop" rel="stylesheet">
 	</head>
 	<body>
+		<a>Coffee labirinth</a>
 		<div id="glavni">
 			<img src="slike/espresomat2.png" alt="espresomat" width="1080" height="900">
 			<div id="sredina">
 				<div id="gumbi">
-					<button class="play" id="play" onclick="drawPath();">☕</button>
+					<button class="play" id="play" onclick="drawPath(); moveImageAlongPath();">☕</button>
 				</div>
-				<canvas class="canv" id="canvas" width="400" height="400"></canvas>
+				<div class="ho">
+					<canvas id="canvas" width="400" height="400"></canvas>
+					<canvas id="canvas2" width="400" height="400"></canvas>
+				</div>
 				<div class="glass-ctr">
 					<div class="glass"></div>
 					<div class="water-ctr">
