--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<div id="sredina">
 				<div id="gumbi">
 					<button class="play" id="play" onclick="drawPath(); moveImageAlongPath();">☕</button>
+					<button class="play" id="play" onclick="drawPath();">☕</button>
 				</div>
 				<div class="ho">
 					<canvas id="canvas" width="400" height="400"></canvas>
@@ -19,8 +20,10 @@
 				</div>
 				<div class="glass-ctr">
 					<div class="glass"></div>
-					<div class="water-ctr">
-						<div class="water"></div>
+					<div class="water-ctr"><img src="slike/kozarcek.png" width="140" height="170" style="position: absolute; left: -5px; top: 0px; z-index: 100;">
+						<div class="water">
+							
+						</div>
 					</div>
 				</div>
 				<script>
