--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 			<img src="slike/espresomat2.png" alt="espresomat" width="1080" height="900">
 			<div id="sredina">
 				<div id="gumbi">
-					<button class="play" id="play" onclick="drawPath(); moveImageAlongPath();">☕</button>
-					<button class="play" id="play" onclick="drawPath();">☕</button>
+					<button class="play" id="play" onclick="drawPath(); moveImageAlongPath();">Caffee late</button>
+					<button class="play" id="play2" onclick="drawPath();">Caffee espresso</button>
 				</div>
 				<div class="ho">
 					<canvas id="canvas" width="400" height="400"></canvas>
@@ -20,7 +20,7 @@
 				</div>
 				<div class="glass-ctr">
 					<div class="glass"></div>
-					<div class="water-ctr"><img src="slike/kozarcek.png" width="140" height="170" style="position: absolute; left: -5px; top: 0px; z-index: 100;">
+					<div class="water-ctr"><img src="slike/kozarcek.png" width="140" height="170" style="position: absolute; left: -5px; top: 0px; z-index: 100; opacity: 0.3;">
 						<div class="water">
 							
 						</div>
