--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	<head>
 		<script src="myscript.js"></script>
 		<link rel="stylesheet" href="styles.css">
+		<link href="https://fonts.cdnfonts.com/css/afternoon-coffee" rel="stylesheet">
 		<link href="https://fonts.cdnfonts.com/css/coffee-shop" rel="stylesheet">
 	</head>
 	<body>
-		<a>Coffee labirinth</a>
+		<a>Coffee  labirinth</a>
 		<div id="glavni">
 			<img src="slike/espresomat2.png" alt="espresomat" width="1080" height="900">
 			<div id="sredina">
